@@ -139,6 +139,8 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import org.eclipse.sw360.datahandler.thrift.users.RequestedAction;
+import org.eclipse.sw360.datahandler.thrift.attachments.LicenseInfoUsage;
+import org.eclipse.sw360.datahandler.thrift.attachments.SourcePackageUsage;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -147,28 +149,20 @@ import java.io.InputStream;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.InvalidPropertiesFormatException;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.NoSuchElementException;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.eclipse.sw360.datahandler.common.CommonUtils.isNullEmptyOrWhitespace;
+import static org.eclipse.sw360.datahandler.common.CommonUtils.nullToEmptyList;
+import static org.eclipse.sw360.datahandler.common.CommonUtils.nullToEmptySet;
 import static org.eclipse.sw360.datahandler.common.CommonUtils.wrapThriftOptionalReplacement;
 import static org.eclipse.sw360.datahandler.common.WrappedException.wrapTException;
+import static org.eclipse.sw360.datahandler.permissions.PermissionUtils.makePermission;
 import static org.eclipse.sw360.rest.resourceserver.Sw360ResourceServer.REPORT_FILENAME_MAPPING;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 
@@ -197,6 +191,8 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             .put(Project._Fields.RELEASE_RELATION_NETWORK, "dependencyNetwork").build();
     private static final ImmutableMap<String, String> RESPONSE_BODY_FOR_MODERATION_REQUEST = ImmutableMap.<String, String>builder()
             .put("message", "Moderation request is created").build();
+    private static final ImmutableMap<String, String> RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT = ImmutableMap.<String, String>builder()
+            .put("message", "Unauthorized user or empty commit message passed.").build();
     private static final List<String> enumReleaseRelationshipValues = Stream.of(ReleaseRelationship.values())
             .map(ReleaseRelationship::name)
             .collect(Collectors.toList());
@@ -663,9 +659,17 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     @RequestMapping(value = PROJECTS_URL + "/{id}", method = RequestMethod.DELETE)
     public ResponseEntity deleteProject(
             @Parameter(description = "Project ID")
-            @PathVariable("id") String id
+            @PathVariable("id") String id,
+            @Parameter(description = "Comment message")
+            @RequestParam(value = "comment", required = false) String comment
     ) throws TException {
         User sw360User = restControllerHelper.getSw360UserFromAuthentication();
+        boolean isWriteAllowed = restControllerHelper
+                .isWriteActionAllowed(projectService.getProjectForUserById(id, sw360User), sw360User);
+        sw360User.setCommentMadeDuringModerationRequest(comment);
+        if (!isWriteAllowed && (comment == null || comment.isBlank())) {
+            return ResponseEntity.badRequest().body(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT);
+        }
         RequestStatus requestStatus = projectService.deleteProject(id, sw360User);
         if (requestStatus == RequestStatus.SUCCESS) {
             return new ResponseEntity<>(HttpStatus.OK);
@@ -775,8 +779,16 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                             // TODO: Add example for MAP value
                     }
             )
-            @RequestBody Object releasesInRequestBody
+            @RequestBody Object releasesInRequestBody,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
     ) throws URISyntaxException, TException {
+        User user = restControllerHelper.getSw360UserFromAuthentication();
+        Project updateProject = projectService.getProjectForUserById(id, user);
+        user.setCommentMadeDuringModerationRequest(comment);
+        if (!restControllerHelper.isWriteActionAllowed(updateProject, user) && comment == null) {
+            return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        }
         RequestStatus linkReleasesStatus = addOrPatchReleasesToProject(id, releasesInRequestBody, false);
         HttpStatus status = HttpStatus.CREATED;
         if (linkReleasesStatus == RequestStatus.SENT_TO_MODERATOR) {
@@ -801,14 +813,16 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                             // TODO: Add example for MAP value
                     }
             )
-            @RequestBody List<String> projectIdsInRequestBody
+            @RequestBody List<String> projectIdsInRequestBody,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
     ) throws URISyntaxException, TException {
 
     User sw360User = restControllerHelper.getSw360UserFromAuthentication();
     Project sourceProj = projectService.getProjectForUserById(id, sw360User);
     Map<String, String> responseMap = new HashMap<>();
     HttpStatus status = null;
-    Set<String> alreadyLinkedIds= new HashSet<>();
+    Set<String> alreadyLinkedIds = new HashSet<>();
     Set<String> idsSentToModerator = new HashSet<>();
     Set<String> idsWithCyclicPath = new HashSet<>();
     Set<String> linkedProjectIds = new HashSet<>();
@@ -816,65 +830,73 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
 
     try {
 
-        for(String projId: projectIdsInRequestBody) {
+        for(String projId : projectIdsInRequestBody){
             Project proj = projectService.getProjectForUserById(projId, sw360User);
-            Map<String, ProjectProjectRelationship> linkedProject = Optional.ofNullable(proj.getLinkedProjects()).orElse(new HashMap<>());
+            Map<String, ProjectProjectRelationship> linkedProject = Optional.ofNullable(proj.getLinkedProjects())
+                    .orElse(new HashMap<>());
 
             if (linkedProject.keySet().contains(id)) {
                 alreadyLinkedIds.add(projId);
                 continue;
             }
 
-            linkedProject.put(id, new ProjectProjectRelationship(ProjectRelationship.CONTAINED).setEnableSvm(sourceProj.isEnableSvm()));
-            proj.setLinkedProjects(linkedProject);
-            String cyclicLinkedProjectPath = projectService.getCyclicLinkedProjectPath(proj, sw360User);
-            if (!CommonUtils.isNullEmptyOrWhitespace(cyclicLinkedProjectPath)) {
-                idsWithCyclicPath.add(cyclicLinkedProjectPath);
-                continue;
-            }
+            sw360User.setCommentMadeDuringModerationRequest(comment);
+            if (!restControllerHelper.isWriteActionAllowed(proj, sw360User) && comment == null) {
+                return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+            } else {
+                linkedProject.put(id, new ProjectProjectRelationship(ProjectRelationship.CONTAINED)
+                        .setEnableSvm(sourceProj.isEnableSvm()));
+                proj.setLinkedProjects(linkedProject);
+                String cyclicLinkedProjectPath = projectService.getCyclicLinkedProjectPath(proj, sw360User);
+                if (!CommonUtils.isNullEmptyOrWhitespace(cyclicLinkedProjectPath)) {
+                    idsWithCyclicPath.add(cyclicLinkedProjectPath);
+                    continue;
+                }
 
-            RequestStatus updatedstatus = projectService.updateProject(proj, sw360User);
-            if (updatedstatus == RequestStatus.SUCCESS) {
-                linkedProjectIds.add(projId);
-            }
+              RequestStatus updatedstatus = projectService.updateProject(proj, sw360User);
+              if (updatedstatus == RequestStatus.SUCCESS) {
+                  linkedProjectIds.add(projId);
+              }
 
-            if (updatedstatus == RequestStatus.SENT_TO_MODERATOR) {
-                idsSentToModerator.add(projId);
+              if (updatedstatus == RequestStatus.SENT_TO_MODERATOR) {
+                  idsSentToModerator.add(projId);
+              }
             }
         }
 
         if (!alreadyLinkedIds.isEmpty()) {
             responseMap.put("Message regarding already linked project(s)", "Project ids are: " + alreadyLinkedIds);
             status = HttpStatus.CONFLICT;
-            count ++;
+            count++;
         }
         if (!idsWithCyclicPath.isEmpty()) {
-            responseMap.put("Message regarding project(s) having cyclic path", "Cyclic linked project path: " + idsWithCyclicPath);
+            responseMap.put("Message regarding project(s) having cyclic path",
+                    "Cyclic linked project path: " + idsWithCyclicPath);
             status = HttpStatus.CONFLICT;
-            count ++;
+            count++;
         }
         if (!idsSentToModerator.isEmpty()) {
             responseMap.put("Message regarding project(s) sent to Moderator", "Project ids are: " + idsSentToModerator);
             status = HttpStatus.ACCEPTED;
-            count ++;
+            count++;
         }
         if (!linkedProjectIds.isEmpty()) {
             responseMap.put("Message regarding successfully linked project(s)", "Project ids are: " + linkedProjectIds);
             status = HttpStatus.CREATED;
-            count ++;
+            count++;
         }
         if (count > 1) {
             status = HttpStatus.CONFLICT;
         }
 
     } catch (TException e) {
-          responseMap.put("ErrorMsg: ", "Error fetching project");
-          status = HttpStatus.INTERNAL_SERVER_ERROR;
-          log.error("Error: ", e);
-    }
+            responseMap.put("ErrorMsg: ", "Error fetching project");
+            status = HttpStatus.INTERNAL_SERVER_ERROR;
+            log.error("Error: ", e);
+        }
 
-    HalResource responseResource = new HalResource(responseMap);
-    return new ResponseEntity<>(responseResource, status);
+        HalResource responseResource = new HalResource(responseMap);
+        return new ResponseEntity<>(responseResource, status);
     }
 
     @PreAuthorize("hasAuthority('WRITE')")
@@ -894,14 +916,23 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                             // TODO: Add example for MAP value
                     }
             )
-            @RequestBody Object releaseURIs
-    ) throws URISyntaxException, TException {
-        RequestStatus patchReleasesStatus = addOrPatchReleasesToProject(id, releaseURIs, true);
-        if (patchReleasesStatus == RequestStatus.SENT_TO_MODERATOR) {
-            return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
-        }
-        return new ResponseEntity<>(HttpStatus.CREATED);
-    }
+            @RequestBody Object releaseURIs,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
+	) throws URISyntaxException, TException {
+		final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
+		Project project = projectService.getProjectForUserById(id, sw360User);
+		if (!restControllerHelper.isWriteActionAllowed(project, sw360User) && comment == null) {
+			return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+		} else {
+		    sw360User.setCommentMadeDuringModerationRequest(comment);
+			RequestStatus patchReleasesStatus = addOrPatchReleasesToProject(id, releaseURIs, true);
+			if (patchReleasesStatus == RequestStatus.SENT_TO_MODERATOR) {
+				return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
+			}
+			return new ResponseEntity<>(HttpStatus.CREATED);
+		}
+	}
 
     @PreAuthorize("hasAuthority('WRITE')")
     @Operation(
@@ -920,17 +951,26 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @Parameter(description = "Set of package IDs to be linked.",
                     example = "[\"3765276512\",\"5578999\",\"3765276513\"]"
             )
-            @RequestBody Set<String> packagesInRequestBody
-    ) throws URISyntaxException, TException {
-        if(!packageService.validatePackageIds(packagesInRequestBody)){
-            return new ResponseEntity<>("Package ID invalid! ", HttpStatus.NOT_FOUND);
-        }
-        RequestStatus linkPackageStatus = linkOrUnlinkPackages(id, packagesInRequestBody, true);
-        if (linkPackageStatus == RequestStatus.SENT_TO_MODERATOR) {
-            return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
-        }
-        return new ResponseEntity<>(HttpStatus.CREATED);
-    }
+            @RequestBody Set<String> packagesInRequestBody,
+            @Parameter(description = "Comment message.", example = "This is new MR.")
+            @RequestParam(value = "comment", required = false) String comment
+	) throws URISyntaxException, TException {
+		if (!packageService.validatePackageIds(packagesInRequestBody)) {
+			return new ResponseEntity<>("Package ID invalid! ", HttpStatus.NOT_FOUND);
+		}
+		final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
+		Project project = projectService.getProjectForUserById(id, sw360User);
+		sw360User.setCommentMadeDuringModerationRequest(comment);
+		if (!restControllerHelper.isWriteActionAllowed(project, sw360User) && comment == null) {
+			return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+		} else {
+			RequestStatus linkPackageStatus = linkOrUnlinkPackages(id, packagesInRequestBody, true);
+			if (linkPackageStatus == RequestStatus.SENT_TO_MODERATOR) {
+				return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
+			}
+			return new ResponseEntity<>(HttpStatus.CREATED);
+		}
+	}
 
     @PreAuthorize("hasAuthority('WRITE')")
     @Operation(
@@ -949,17 +989,26 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @Parameter(description = "Set of package IDs to be linked.",
                     example = "[\"3765276512\",\"5578999\",\"3765276513\"]"
             )
-            @RequestBody Set<String> packagesInRequestBody
-    ) throws URISyntaxException, TException {
-        if(!packageService.validatePackageIds(packagesInRequestBody)){
-            return new ResponseEntity<>("Package ID invalid! ", HttpStatus.NOT_FOUND);
-        }
-        RequestStatus patchPackageStatus = linkOrUnlinkPackages(id, packagesInRequestBody, false);
-        if (patchPackageStatus == RequestStatus.SENT_TO_MODERATOR) {
-            return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
-        }
-        return new ResponseEntity<>(HttpStatus.CREATED);
-    }
+            @RequestBody Set<String> packagesInRequestBody,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
+	) throws URISyntaxException, TException {
+		if (!packageService.validatePackageIds(packagesInRequestBody)) {
+			return new ResponseEntity<>("Package ID invalid! ", HttpStatus.NOT_FOUND);
+		}
+		final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
+		Project project = projectService.getProjectForUserById(id, sw360User);
+		sw360User.setCommentMadeDuringModerationRequest(comment);
+		if (!restControllerHelper.isWriteActionAllowed(project, sw360User) && comment == null) {
+			return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+		} else {
+			RequestStatus patchPackageStatus = linkOrUnlinkPackages(id, packagesInRequestBody, false);
+			if (patchPackageStatus == RequestStatus.SENT_TO_MODERATOR) {
+				return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
+			}
+			return new ResponseEntity<>(HttpStatus.CREATED);
+		}
+	}
 
     @Operation(
             description = "Get releases of a single project.",
@@ -1277,10 +1326,12 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @Parameter(description = "Project ID.")
             @PathVariable("id") String id,
             @Parameter(description = "Vulnerability list")
-            @RequestBody List<VulnerabilityDTO> vulnDTOs
-    ) {
+            @RequestBody List<VulnerabilityDTO> vulnDTOs,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
+    ) throws TException {
         final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
-
+        Project project = projectService.getProjectForUserById(id, sw360User);
         List<VulnerabilityDTO> actualVDto = vulnerabilityService.getVulnerabilitiesByProjectId(id, sw360User);
         Set<String> actualExternalId = actualVDto.stream().map(VulnerabilityDTO::getExternalId).collect(Collectors.toSet());
         Set<String> externalIdsFromRequestDto = vulnDTOs.stream().map(VulnerabilityDTO::getExternalId).collect(Collectors.toSet());
@@ -1300,6 +1351,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
 
         Optional<ProjectVulnerabilityRating> projectVulnerabilityRatings = wrapThriftOptionalReplacement(vulnerabilityService.getProjectVulnerabilityRatingByProjectId(id, sw360User));
         ProjectVulnerabilityRating link = updateProjectVulnerabilityRatingFromRequest(projectVulnerabilityRatings, vulnDTOs, id, sw360User);
+        if (!restControllerHelper.isWriteActionAllowed(project, sw360User) && comment == null) {
+            return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        }
+
+        sw360User.setCommentMadeDuringModerationRequest(comment);
         final RequestStatus requestStatus = vulnerabilityService.updateProjectVulnerabilityRating(link, sw360User);
         final List<EntityModel<VulnerabilityDTO>> vulnerabilityResources = new ArrayList<>();
         vulnDTOs.forEach(dto->{
@@ -1331,13 +1387,19 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @Parameter(description = "Release ID.")
             @PathVariable("releaseId") String releaseId,
             @Parameter(description = "Map of release id to usage.")
-            @RequestBody ProjectReleaseRelationship requestBodyProjectReleaseRelationship
+            @RequestBody ProjectReleaseRelationship requestBodyProjectReleaseRelationship,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
     ) throws TException {
         final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         final Project sw360Project = projectService.getProjectForUserById(id, sw360User);
         Map<String, ProjectReleaseRelationship> releaseIdToUsage = sw360Project.getReleaseIdToUsage();
         ProjectReleaseRelationship updatedProjectReleaseRelationship = projectService
                 .updateProjectReleaseRelationship(releaseIdToUsage, requestBodyProjectReleaseRelationship, releaseId);
+        if (!restControllerHelper.isWriteActionAllowed(sw360Project, sw360User) && comment == null) {
+            return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        }
+        sw360User.setCommentMadeDuringModerationRequest(comment);
         RequestStatus updateProjectStatus = projectService.updateProject(sw360Project, sw360User);
         if (updateProjectStatus == RequestStatus.SENT_TO_MODERATOR) {
             return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
@@ -1497,7 +1559,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             if (!selectedReleaseAndAttachmentIds.containsKey(releaseLinkId)) {
                 selectedReleaseAndAttachmentIds.put(releaseLinkId, new HashMap<>());
             }
-            final List<Attachment> attachments = releaseLink.getAttachments();
+            final List<Attachment> attachments = nullToEmptyList(releaseLink.getAttachments());
             Release release = componentService.getReleaseById(releaseLinkId, sw360User);
             for (final Attachment attachment : attachments) {
                 String attachemntContentId = attachment.getAttachmentContentId();
@@ -1578,12 +1640,18 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @PathVariable("id") String id,
             @Parameter(description = "Attachment ID.")
             @PathVariable("attachmentId") String attachmentId,
-            @RequestBody Attachment attachmentData
+            @RequestBody Attachment attachmentData,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment
     ) throws TException {
         final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         final Project sw360Project = projectService.getProjectForUserById(id, sw360User);
-        Set<Attachment> attachments = sw360Project.getAttachments();
+        Set<Attachment> attachments = nullToEmptySet(sw360Project.getAttachments());
+        sw360User.setCommentMadeDuringModerationRequest(comment);
         Attachment updatedAttachment = attachmentService.updateAttachment(attachments, attachmentData, attachmentId, sw360User);
+        if (!restControllerHelper.isWriteActionAllowed(sw360Project, sw360User) && comment == null) {
+            return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        }
         RequestStatus updateProjectStatus = projectService.updateProject(sw360Project, sw360User);
         if (updateProjectStatus == RequestStatus.SENT_TO_MODERATOR) {
             return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
@@ -1631,7 +1699,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
         final Project project = projectService.getProjectForUserById(projectId, sw360User);
         final String filename = "Clearing-Reports-" + project.getName() + ".zip";
 
-        final Set<Attachment> attachments = project.getAttachments();
+        final Set<Attachment> attachments = nullToEmptySet(project.getAttachments());
         final Set<AttachmentContent> clearingAttachments = new HashSet<>();
         for (final Attachment attachment : attachments) {
             if (attachment.getAttachmentType().equals(AttachmentType.CLEARING_REPORT)) {
@@ -1657,20 +1725,27 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     public ResponseEntity<EntityModel<Project>> patchProject(
             @Parameter(description = "Project ID.")
             @PathVariable("id") String id,
-            @Parameter(description = "Updated values", schema = @Schema(implementation = Project.class))
+            @Parameter(description = "Updated values. Add `comment` field in the body for moderation request.", schema = @Schema(implementation = Project.class))
             @RequestBody Map<String, Object> reqBodyMap
     ) throws TException {
-            User user = restControllerHelper.getSw360UserFromAuthentication();
-            Project sw360Project = projectService.getProjectForUserById(id, user);
-            boolean editPermitted = PermissionUtils.checkEditablePermission(sw360Project.getClearingState().name(),user,reqBodyMap, sw360Project);
-            if (!editPermitted) {
-                log.error("No write permission for project");
-                throw new AccessDeniedException("No write permission for project");
-            }
-            Project updateProject = convertToProject(reqBodyMap);
-            updateProject.unsetReleaseRelationNetwork();
-            sw360Project = this.restControllerHelper.updateProject(sw360Project, updateProject, reqBodyMap, mapOfProjectFieldsToRequestBody);
-            if (SW360Constants.ENABLE_FLEXIBLE_PROJECT_RELEASE_RELATIONSHIP && updateProject.getReleaseIdToUsage() != null) {
+        User user = restControllerHelper.getSw360UserFromAuthentication();
+        Project sw360Project = projectService.getProjectForUserById(id, user);
+        boolean editPermitted = PermissionUtils.checkEditablePermission(sw360Project.getClearingState().name(), user, reqBodyMap, sw360Project);
+        if (!editPermitted) {
+            log.error("No write permission for project");
+            throw new AccessDeniedException("No write permission for project");
+        }
+        Project updateProject = convertToProject(reqBodyMap);
+        updateProject.unsetReleaseRelationNetwork();
+        String comment = (String) reqBodyMap.get("comment");
+        user.setCommentMadeDuringModerationRequest(comment);
+        if (!restControllerHelper.isWriteActionAllowed(sw360Project, user) && comment == null) {
+            return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        } else {
+            sw360Project = this.restControllerHelper.updateProject(sw360Project, updateProject, reqBodyMap,
+                    mapOfProjectFieldsToRequestBody);
+            if (SW360Constants.ENABLE_FLEXIBLE_PROJECT_RELEASE_RELATIONSHIP
+                    && updateProject.getReleaseIdToUsage() != null) {
                 sw360Project.unsetReleaseRelationNetwork();
                 projectService.syncReleaseRelationNetworkAndReleaseIdToUsage(sw360Project, user);
             }
@@ -1683,6 +1758,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST, HttpStatus.ACCEPTED);
             }
             return new ResponseEntity<>(userHalResource, HttpStatus.OK);
+        }
     }
 
     @Operation(
@@ -1697,10 +1773,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             @RequestParam("file") MultipartFile[] files,
             @Parameter(description = "Attachments descriptions")
             @RequestParam("attachments") String attachmentsJson,
+            @Parameter(description = "Comment message.")
+            @RequestParam(value = "comment", required = false) String comment,
             HttpServletRequest request,
             HttpServletResponse response
-
-    ) throws TException, IOException {
+    ) throws TException {
         final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         final Project project = projectService.getProjectForUserById(projectId, sw360User);
 
@@ -1751,6 +1828,10 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
         }
 
         try {
+            if (!restControllerHelper.isWriteActionAllowed(project, sw360User) && comment == null) {
+                return new ResponseEntity(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+            }
+            sw360User.setCommentMadeDuringModerationRequest(comment);
             RequestStatus updateStatus = projectService.updateProjectForAttachment(project, sw360User, request, null,
                     projectId);
 
@@ -1964,6 +2045,24 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
         }
 	}
 
+    public Map<String, Integer> countMap(Collection<AttachmentType> attachmentTypes, UsageData filter, Project project, User sw360User, String id) throws TException {
+        boolean projectWithSubProjects = !project.getLinkedProjects().isEmpty();
+        List<ProjectLink> mappedProjectLinks =
+                (!SW360Constants.ENABLE_FLEXIBLE_PROJECT_RELEASE_RELATIONSHIP)
+                        ? projectService.createLinkedProjects(project,
+                        projectService.filterAndSortAttachments(attachmentTypes), true, sw360User)
+                        : projectService.createLinkedProjectsWithAllReleases(project,
+                        projectService.filterAndSortAttachments(attachmentTypes), true, sw360User);
+
+        if (!projectWithSubProjects) {
+            mappedProjectLinks = mappedProjectLinks.stream()
+                    .filter(projectLink -> projectLink.getId().equals(id)).collect(Collectors.toList());
+        }
+
+        Map<String, Integer> countMap = projectService.storeAttachmentUsageCount(mappedProjectLinks, filter);
+        return countMap;
+    }
+
     @Operation(
             description = "Get all attachmentUsages of the projects.",
             tags = {"Projects"}
@@ -2031,12 +2130,27 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             }
         }
 
-        List<Map<String, Object>> releaseObjMap = getReleaseObjectMapper(releaseList);
+        Collection<AttachmentType> attachmentTypes;
+        UsageData type;
+        List<Map<String, Object>> releaseObjMap = new ArrayList<>();
+        if ("withCliAttachment".equalsIgnoreCase(filter)) {
+            attachmentTypes = SW360Constants.LICENSE_INFO_ATTACHMENT_TYPES;
+            type = UsageData.licenseInfo(new LicenseInfoUsage(Sets.newHashSet()));
+            Map<String, Integer> count = countMap(attachmentTypes, type, sw360Project, sw360User, id);
+            releaseObjMap = getReleaseObjectMapper(releaseList, count);
+        } else if ("withSourceAttachment".equalsIgnoreCase(filter)) {
+            attachmentTypes = SW360Constants.SOURCE_CODE_ATTACHMENT_TYPES;
+            type = UsageData.sourcePackage(new SourcePackageUsage());
+            Map<String, Integer> count = countMap(attachmentTypes, type, sw360Project, sw360User, id);
+            releaseObjMap = getReleaseObjectMapper(releaseList, count);
+        } else {
+            releaseObjMap = getReleaseObjectMapper(releaseList, null);
+        }
         HalResource userHalResource = attachmentUsageReleases(sw360Project, releaseObjMap, listOfAttachmentUsages);
         return new ResponseEntity<>(userHalResource, HttpStatus.OK);
     }
 
-	private List<Map<String, Object>> getReleaseObjectMapper(List<EntityModel<Release>> releaseList) {
+	private List<Map<String, Object>> getReleaseObjectMapper(List<EntityModel<Release>> releaseList, Map<String, Integer> count) {
 		ObjectMapper oMapper = new ObjectMapper();
 		List<Map<String, Object>> modifiedList = new ArrayList<>();
 		for (EntityModel<Release> rel : releaseList) {
@@ -2075,6 +2189,15 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                                 map.put("checkedTeam", att.get("checkedTeam"));
                                 map.put("checkedComment", att.get("checkedComment"));
                                 map.put("checkedOn", att.get("checkedOn"));
+                                if (count != null) {
+                                    Integer attachmentCount = 0;
+                                    String releaseId = relMap.get("id").toString();
+                                    String attachmentId = releaseId + "_" + att.get("attachmentContentId");
+                                    if (count.containsKey(attachmentId)) {
+                                        attachmentCount = count.get(attachmentId);
+                                    }
+                                    map.put("attachmentUsageCount",attachmentCount);
+                                }
                                 attList.add(map);
                             }
                             valueToKeep.put(entry.getKey(), attList);
@@ -2100,9 +2223,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> sourceAttachments = sw360Release.getAttachments().stream()
-                        .filter(attachment -> attachment.getAttachmentType() == AttachmentType.SOURCE || attachment.getAttachmentType() == AttachmentType.SOURCE_SELF)
-                        .collect(Collectors.toList());
+                    List<Attachment> sourceAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
+                        .filter(attachment ->
+                                attachment.getAttachmentType() == AttachmentType.SOURCE ||
+                                        attachment.getAttachmentType() == AttachmentType.SOURCE_SELF)
+                        .toList();
                     Set<Attachment> sourceAttachmentsSet = new HashSet<>(sourceAttachments);
                     sw360Release.setAttachments(sourceAttachmentsSet);
                     return sourceAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -2114,9 +2239,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> withoutSourceAttachments = sw360Release.getAttachments().stream()
-                        .filter(attachment -> attachment.getAttachmentType() != AttachmentType.SOURCE && attachment.getAttachmentType() != AttachmentType.SOURCE_SELF)
-                        .collect(Collectors.toList());
+                    List<Attachment> withoutSourceAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
+                        .filter(attachment ->
+                                attachment.getAttachmentType() != AttachmentType.SOURCE &&
+                                        attachment.getAttachmentType() != AttachmentType.SOURCE_SELF)
+                        .toList();
                     Set<Attachment> withoutSourceAttachmentsSet = new HashSet<>(withoutSourceAttachments);
                     sw360Release.setAttachments(withoutSourceAttachmentsSet);
                     return withoutSourceAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -2128,7 +2255,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    return sw360Release.getAttachments().isEmpty() ? sw360Release : null;
+                    return nullToEmptySet(sw360Release.getAttachments()).isEmpty() ? sw360Release : null;
                 }))
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
@@ -2137,7 +2264,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    return sw360Release.getAttachments().isEmpty() ? null : sw360Release;
+                    return nullToEmptySet(sw360Release.getAttachments()).isEmpty() ? null : sw360Release;
                 }))
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
@@ -2146,9 +2273,9 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> cliAttachments = sw360Release.getAttachments().stream()
-                        .filter(attachment -> attachment.getAttachmentType() == AttachmentType.COMPONENT_LICENSE_INFO_XML)
-                        .collect(Collectors.toList());
+                    List<Attachment> cliAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
+                        .filter(attachment -> attachment.getAttachmentType() == AttachmentType.COMPONENT_LICENSE_INFO_XML || attachment.getAttachmentType() == AttachmentType.COMPONENT_LICENSE_INFO_COMBINED)
+                        .toList();
                     Set<Attachment> cliAttachmentsSet = new HashSet<>(cliAttachments);
                     sw360Release.setAttachments(cliAttachmentsSet);
                     return cliAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -2421,7 +2548,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     public ResponseEntity<?> patchProjectWithNetwork(
             @Parameter(description = "Project ID", example = "376576")
             @PathVariable("id") String id,
-            @Parameter(description = "Project with `dependencyNetwork` set.",
+            @Parameter(description = "Project with `dependencyNetwork` set. Add `comment` field in the body for moderation request.",
                     schema = @Schema(implementation = Project.class))
             @RequestBody Map<String, Object> reqBodyMap
     ) throws TException {
@@ -2444,7 +2571,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             log.error(sw360Exception.getWhy());
             return ResponseEntity.badRequest().body(sw360Exception.getWhy());
         }
-
+        String comment = (String) reqBodyMap.get("comment");
+        if (!restControllerHelper.isWriteActionAllowed(updateProject, user) && comment == null) {
+            return new ResponseEntity<>(RESPONSE_BODY_FOR_MODERATION_REQUEST_WITH_COMMIT, HttpStatus.BAD_REQUEST);
+        }
+        user.setCommentMadeDuringModerationRequest(comment);
         sw360Project = this.restControllerHelper.updateProject(sw360Project, updateProject, reqBodyMap, mapOfProjectFieldsToRequestBody);
         projectService.syncReleaseRelationNetworkAndReleaseIdToUsage(sw360Project, user);
 
@@ -3042,7 +3173,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     ) throws TException {
         User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         Project sw360Project = projectService.getProjectForUserById(id, sw360User);
-        if(sw360Project.getLicenseInfoHeaderText().isEmpty()){
+        if (isNullEmptyOrWhitespace(sw360Project.getLicenseInfoHeaderText())) {
             sw360Project.setLicenseInfoHeaderText(projectService.getLicenseInfoHeaderText());
         }
         Map<String, String> sortedExternalURLs = CommonUtils.getSortedMap(sw360Project.getExternalUrls(), true);
